# streamlit-sagemaker-app

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-streamlit.yaml
app/: main.py  utils.py
