[tool.poetry]
name = "streamlit-sagemaker-app"
version = "0.1.0"
description = "Streamlit app to display sagemaker endpoints."
authors = ["Sebastian Blum <hello@seblum.me>"]
readme = "README.md"
# packages = [{include = "streamlit_sagemaker_app"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
boto3 = "^1.28.37"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
